@@ -297,6 +297,14 @@ listed below. Defaults will be provided for all values not explicitly set.
   sockets. If not specified, this option will not be set by default. DPDK
   default will be used instead.
 
+``dpdk-probe-at-init``
+  Let DPDK EAL probe all available devices at initialisation.
+  This consumes more resources as OVS may not use all probed devices and this
+  may have undesired side effects (like taking the RTNL lock frequently for
+  maintaining link status (and other states etc..) of mlx5 netdevs that OVS
+  does not care about. However, this option is needed when using the
+  ``class=eth,mac=XX:XX:XX:XX:XX:XX`` syntax for DPDK ports.
+
 ``dpdk-hugepage-dir``
   Directory where hugetlbfs is mounted
 
