@@ -23,6 +23,10 @@ v3.7.0 - xx xxx xxxx
        using routing rules for selecting next hops after encapsulation.
    - DPDK:
      * Add support for DPDK 25.11.
+     * Probing of devices at DPDK init has been disabled to avoid wasting
+       resources on unused devices. This breaks DPDK netdev ports using
+       "class=eth,mac=" syntax (though it can be restored, see
+       Documentation/howto/dpdk.rst).
    - Flow HW Offload:
      * New global configuration option 'other-config:hw-offload-priority'
        that allows to set the order of the hardware offload providers
